fixed completed alignment issues and allowed for wider pictures on post page and feed

--- a/static/feed.css
+++ b/static/feed.css
@@ -18,7 +18,7 @@
 	margin-top:4px;
 }
 .card {
-	max-width: 800px;
+	max-width: 100%;
 	margin: auto;
 	padding: 10px;
 	margin-bottom: 50px;
@@ -49,7 +49,7 @@
 }
 
 
-.post{
+.complete{
         border-width: 10px !important;
 }
 
